# Pico-2-USB-Keyboard-Mouse-Speaker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
